--- a/src/app/component/users/home/home.component.html
+++ b/src/app/component/users/home/home.component.html
@@ -142,7 +142,9 @@
 
     </section>
 
-    <section class="view-all-experts h-fit  mb-24">
+    <!-- Experts -->
+
+    <!-- <section class="view-all-experts h-fit  mb-24">
         <div class="flex justify-center space-x-96 mb-5 mt-24">
             <div>
                 <p class="text-black text-2xl md:text-3xl  font-medium">Our team of Experts<span>✨</span></p>
@@ -157,10 +159,10 @@
                 <button class="text-orange-500  md:text-xl  p-2 font-bold "> View All</button>
             </div>
         </div>
-        <div>
-            <app-carousel></app-carousel>
-        </div>
-    </section>
+        <div> -->
+    <!-- <app-carousel></app-carousel> -->
+    <!-- </div>
+    </section> -->
 
 
     <section class="thoughts">
@@ -337,7 +339,7 @@
         </div>
 
 
-        <button (click)="check()" class="bg-slate-950 text-white">check</button>
+
     </section>
 
 
