--- a/src/app/component/users/otp/otp.component.html
+++ b/src/app/component/users/otp/otp.component.html
@@ -14,9 +14,9 @@
                     class="text-green-400 text-sm">{{email}}</span>
             </p>
 
-            <div *ngIf="isLoading">
+            <!-- <div *ngIf="isLoading">
                 <app-loading-spinner></app-loading-spinner>
-            </div>
+            </div> -->
 
             <div *ngIf=" otpErrorMessage">
 
