--- a/src/app/component/users/reset-password/reset-password.component.html
+++ b/src/app/component/users/reset-password/reset-password.component.html
@@ -12,9 +12,9 @@
             <h3 class="mb-4  my-7 text-xl font-medium text-white dark:text-white">New password..</h3>
 
 
-            <div *ngIf="">
+            <!-- <div *ngIf="">
                 <app-loading-spinner></app-loading-spinner>
-            </div>
+            </div> -->
 
             <div *ngIf=" ">
 
@@ -27,12 +27,14 @@
                     <input type="password" name="password" formControlName="password"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                         placeholder=" Enter The password" required>
-                    <div *ngIf="f['password'].touched && f['password'].dirty && f['password'].getError('required')!=null">
+                    <div
+                        *ngIf="f['password'].touched && f['password'].dirty && f['password'].getError('required')!=null">
 
                         <p id="filled_success_help" class=" pt-2 px-2 mt-2 text-xs text-red-600 dark:text-red-400">
                             Enter the password</p>
                     </div>
-                    <div *ngIf="f['password'].touched && f['password'].dirty&&f['password'].getError('minlength')!=null">
+                    <div
+                        *ngIf="f['password'].touched && f['password'].dirty&&f['password'].getError('minlength')!=null">
                         <p id="filled_success_help" class=" pt-2 px-2 mt-2 text-xs text-red-600 dark:text-red-400">
                             Password should be of 6 characters</p>
 
@@ -44,13 +46,15 @@
                     class="bg-gray-50  my-5 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
                     placeholder=" confirm password" required>
 
-                <div *ngIf="f['confpassword'].touched && f['confpassword'].dirty && f['confpassword'].getError('required')!=null">
+                <div
+                    *ngIf="f['confpassword'].touched && f['confpassword'].dirty && f['confpassword'].getError('required')!=null">
 
                     <p id="filled_success_help" class=" pt-2 px-2 mt-2 text-xs text-red-600 dark:text-red-400">
                         Enter the password</p>
                 </div>
-               
-                <div *ngIf="f['confpassword'].touched && f['confpassword'].dirty && f['confpassword'].getError('mustmatch')!=null">
+
+                <div
+                    *ngIf="f['confpassword'].touched && f['confpassword'].dirty && f['confpassword'].getError('mustmatch')!=null">
                     <p id="filled_success_help" class="px-2 mt-2 text-xs text-red-600 dark:text-red-400">
                         Password mismatched</p>
 
