--- a/src/app/component/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/component/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,190 +1,231 @@
 <div class="flex bg-cover bg-center  h-full"
     style=" background-image: url('../../../../assets/image/admindashboard.png'); ">
     <app-navsidebar></app-navsidebar>
-    <main class=" min-w-0 flex-1 overflow-auto pt-16 ml-80  ">
-
-        <div class="  fixed rounded-2xl z-40 top-0  shadow-lg bg-white border w-fit  p-10 pl-5 pr-6 ">
-            <div class="flex -mt-6  ">
-                <div class>
-                    <div class="text-base font-bold text-black">Over View</div>
-                    <div></div>
-                </div>
-
-
+    <div *ngIf="loadingspinner==true">
+        <div>
+            <div class="ml-[800px] mt-52">
+                <ng-container *ngIf="loadingspinner==true">
+                    <app-loading-spinner></app-loading-spinner>
+                </ng-container>
             </div>
+        </div>
+    </div>
+    <ng-container *ngIf="loadingspinner==false">
+        <main class=" min-w-0 flex-1 overflow-auto pt-16 ml-80  ">
+
+            <div class="  fixed rounded-2xl z-40 top-0  shadow-lg bg-white border w-fit  p-10 pl-5 pr-6 ">
+                <div class="flex -mt-6  ">
+                    <div class>
+                        <div class="text-base font-bold text-black">Over View</div>
+                        <div></div>
+                    </div>
 
 
-
-            <div class="flex space-x-14   ">
-
-                <div
-                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium opacity-95">
-
-                    <p>dfkjrhfiruhgir</p>
                 </div>
-                <div
-                    class="mt-5 p-5 rounded-lg  bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium   opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
-                </div>
-                <div
-                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium  opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
-                </div>
-                <div
-                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 shadow-lg shadow-teal-500/50 dark:shadow-lg dark:shadow-teal-800/80 font-medium  opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
-                </div>
-                <div
+                <div class="flex space-x-20  ">
+
+
+                    <div
+                        class="mt-5 p-5 px-12 rounded-lg bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium opacity-95">
+
+                        <div class="text-white font-medium text-lg whitespace-nowrap">Total User</div>
+                        <div class="flex justify-center">
+                            <p class="text-white pt-3 font-bold text-lg">
+                                {{dashboardCounts?.userCount}}</p>
+                        </div>
+                    </div>
+
+                    <div
+                        class="mt-5 p-5 px-12 rounded-lg  bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium   opacity-95">
+
+                        <p class="text-white font-medium text-lg whitespace-nowrap">Total Expert</p>
+                        <div class="flex justify-center pt-2">
+                            <p class="text-white font-bold text-lg">{{dashboardCounts?.expertCount}}</p>
+                        </div>
+                    </div>
+                    <div
+                        class="mt-5 p-5 px-12 rounded-lg bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium  opacity-95">
+
+                        <p class="text-white font-medium text-lg whitespace-nowrap">Admin Revenue</p>
+                        <div class="flex justify-center pt-2">
+                            <p class="text-white font-bold text-lg">{{dashboardCounts?.AdminRevenue}} ₹</p>
+                        </div>
+                    </div>
+                    <div
+                        class="mt-5 p-5 px-12 rounded-lg bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 shadow-lg shadow-teal-500/50 dark:shadow-lg dark:shadow-teal-800/80 font-medium  opacity-95">
+
+                        <p class="text-white font-medium text-lg whitespace-nowrap"> Appoinment</p>
+                        <div class="flex justify-center pt-2">
+                            <p class="text-white font-bold text-lg">{{dashboardCounts?.activeappoinment}}</p>
+                        </div>
+                    </div>
+                    <!-- <div
                     class="mt-5 p-5 rounded-lg bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium  opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
+                    <p class="text-white font-medium text-lg whitespace-nowrap">Chats Sessions</p>
+                    <div class="flex justify-center pt-2">
+                        <p class="text-white font-bold text-lg">{{dashboardCounts?.chatCount}}</p>
+                    </div>
                 </div>
                 <div
                     class="mt-5 p-5 rounded-lg bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 dark:shadow-lg dark:shadow-lime-800/80 font-medium  opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
+                    <p class="text-white font-medium text-lg whitespace-nowrap">Video Session</p>
+                    <div class="flex justify-center pt-2">
+                        <p class="text-white font-bold text-lg">{{dashboardCounts?.videoCount}}</p>
+                    </div>
+                </div> -->
+
+
                 </div>
 
 
-            </div>
-
-
-
-        </div>
-        <div class="flex space-x-10 mt-32">
-            <div class="  rounded-2xl  shadow-lg   border w-fit  p-5  mt-5  ">
-
-                <app-piechart></app-piechart>
 
             </div>
-            <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit  ">
-                <table
-                    class="w-fit m-5   text-sm text-left z-0 border-3 brightness-95 border-green-50  text-gray-500 dark:text-gray-400 ">
-                    <thead class="text-xs  text-white uppercase   bg-pink-600 dark:bg-gray-700 dark:text-gray-400">
-                        <tr>
-                            <th scope="col" class="px-6 py-3">
-                                No
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Name
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Email
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Phone
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Date of Joined
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Block
-                            </th>
-                            <!-- <th scope="col" class="px-6 py-3">
-                        <span class="sr-only">Edit</span>
-                    </th> -->
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr
-                            class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
-                            <td class="px-6 py-4 text-gray-900 font-medium">
-
-                            </td>
-                            <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-
-                            </td>
-                            <td class="px-6 py-4 text-gray-900 font-medium ">
-
-                            </td>
-                            <td class="px-6 py-4 text-gray-900 font-medium">
-
-                            </td>
-                            <td class="px-6 py-4 text-gray-900 font-medium">
+            <div class="flex space-x-10 mt-40">
 
 
-                            </td>
-                            <td class="px-6 py-4">
+                <div class="  rounded-2xl  shadow-lg   border w-fit  p-5  mt-5  ">
 
-                            </td>
-                            <!-- <td class="px-6 py-4 text-right">
-                        <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                    </td> -->
-                        </tr>
+                    <h1 class="text-base font-bold text-black">{{name}}</h1>
+                    <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient"
+                        [legend]="showLegend" [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)"
+                        (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
+                    </ngx-charts-pie-chart>
+                    <!-- <p-chart type="pie" [data]="basicData" [options]="basicOptions" (onDataSelect)="selectData($event)"
+                    height="80vh" width="40vw"></p-chart> -->
+
+                </div>
+
+                <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit  ">
+                    <div class="text-base font-bold text-black m-5">top 3 Performers</div>
+
+                    <table
+                        class=" w-fit m-5   text-sm text-left z-0 border-3 brightness-95 border-green-50  text-gray-500 dark:text-gray-400 ">
+                        <thead class="text-xs  text-white uppercase   bg-pink-600 dark:bg-gray-700 dark:text-gray-400">
+                            <tr>
+                                <th scope="col" class="px-6 py-3">
+                                    No
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    Name
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    video
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    Chat
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    Total
+                                </th>
 
 
-                    </tbody>
-                </table>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of  earningsByExpert;let i =index"
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
+                                <td class="px-6 py-4 ">
+                                    <div class="text-2xl p-2  rounded-full font-extrabold text-gray-900  "> {{i+1}}
+                                    </div>
+
+
+                                </td>
+                                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                                    {{item.expertName}}
+                                </td>
+                                <ng-container *ngFor="let item2 of item.earningsByBookingType">
+                                    <ng-container *ngIf="item2.bookingType== 'video' ">
+                                        <td class="px-6 py-4 text-gray-900 font-medium ">
+                                            {{item2.totalEarnings}} ₹
+                                        </td>
+                                    </ng-container>
+                                    <ng-container *ngIf="item2.bookingType== 'chat' ">
+                                        <td class="px-6 py-4 text-gray-900 font-medium">
+                                            {{item2.totalEarnings}} ₹
+                                        </td>
+                                    </ng-container>
+                                </ng-container>
+                                <td class="px-6 py-4 text-gray-900 font-medium">
+                                    {{item.totalEarnings}} ₹
+                                </td>
+
+
+                            </tr>
+
+
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
+            <div class="flex space-x-10 mb-10 mt-5">
+                <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit  p-5 ">
+                    <app-barchart></app-barchart>
+                </div>
+                <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit  overflow-y-auto  h-96 ">
+                    <div class="text-base font-bold text-black m-5">expert request</div>
+                    <table
+                        class="w-fit m-5 text-sm text-left border-3 brightness-95 border-green-50  text-gray-500 dark:text-gray-400 ">
+                        <thead class="text-xs  text-white uppercase   bg-pink-600 dark:bg-gray-700 dark:text-gray-400">
+                            <tr>
+                                <th scope="col" class="px-6 py-3">
+                                    No
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    Name
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    catagory
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    Experiance
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    Date
+                                </th>
+
+
+                            </tr>
+                        </thead>
+                        <tbody *ngFor="let item of unverifiedExperts; let i=index">
+                            <tr (click)="viewExpert(item._id)"
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
+                                <td class="px-6 py-4 text-gray-900 font-medium">
+                                    {{i+1}}
+                                </td>
+                                <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                                    {{item.name}}
+                                </td>
+                                <td class="px-6 py-4 text-gray-900 font-medium ">
+                                    {{item.specialization}}
+                                </td>
+                                <td class="px-6 py-4 text-gray-900 font-medium">
+                                    {{item.experience}}
+                                </td>
+                                <td class="px-6 py-4 text-gray-900 font-medium">
+
+                                    {{item.joined|date}}
+                                </td>
+
+
+                            </tr>
+
+
+
+
+
+
+
+                        </tbody>
+                    </table>
+                </div>
             </div>
 
-        </div>
-        <div class="flex space-x-10 mb-10 mt-5">
-            <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit  p-5 ">
-                <app-barchart></app-barchart>
-            </div>
-            <div class=" mt-5  rounded-2xl  shadow-lg   border w-fit    ">
-                <table
-                    class="w-fit m-5 text-sm text-left border-3 brightness-95 border-green-50  text-gray-500 dark:text-gray-400 ">
-                    <thead class="text-xs  text-white uppercase   bg-pink-600 dark:bg-gray-700 dark:text-gray-400">
-                        <tr>
-                            <th scope="col" class="px-6 py-3">
-                                No
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Name
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Email
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Phone
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Date of Joined
-                            </th>
-                            <th scope="col" class="px-6 py-3">
-                                Block
-                            </th>
-                            <!-- <th scope="col" class="px-6 py-3">
-                            <span class="sr-only">Edit</span>
-                        </th> -->
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr
-                            class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
-                            <td class="px-6 py-4 text-gray-900 font-medium">
-
-                            </td>
-                            <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-
-                            </td>
-                            <td class="px-6 py-4 text-gray-900 font-medium ">
-
-                            </td>
-                            <td class="px-6 py-4 text-gray-900 font-medium">
-
-                            </td>
-                            <td class="px-6 py-4 text-gray-900 font-medium">
-
-
-                            </td>
-                            <td class="px-6 py-4">
-
-                            </td>
-                            <!-- <td class="px-6 py-4 text-right">
-                            <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                        </td> -->
-                        </tr>
-
-
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-    </main>
+        </main>
+    </ng-container>
 </div>
