--- a/src/app/component/admin/flag/flag.component.html
+++ b/src/app/component/admin/flag/flag.component.html
@@ -39,154 +39,161 @@
          </th> -->
                 </tr>
             </thead>
+            <ng-container *ngIf="loadingspinner==true">
+                <div class="ml-96">
+                    <app-loading-spinner></app-loading-spinner>
+                </div>
+            </ng-container>
             <tbody *ngFor="let item of flagPost;let i=index">
 
-                <tr
-                    class=" bg-white border-b dark:bg-gray-800  dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
-                    <td class="px-6 py-4 text-gray-900 font-medium ">
-                        {{i+1}}
-                    </td>
-                    <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        <!-- {{item.content}} -->
-                        {{item.user.name}}
+                <ng-container *ngIf="loadingspinner==false">
+                    <tr
+                        class=" bg-white border-b dark:bg-gray-800  dark:border-gray-700 hover:bg-orange-50 dark:hover:bg-gray-600">
+                        <td class="px-6 py-4 text-gray-900 font-medium ">
+                            {{i+1}}
+                        </td>
+                        <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                            <!-- {{item.content}} -->
+                            {{item.user.name}}
 
-                        <!-- <a routerLink=" (click)="openModal()" ">Product Detail</a> -->
-                    </td>
-                    <td class="px-6 py-4 text-gray-900 font-medium ">
-                        {{item.timestamp|date:'MM/d/yyy'}}
-                    </td>
-                    <!-- <ng-container *ngFor="let rslt of item.flags"> -->
-                    <td class="px-6 py-4 text-gray-900 font-medium">
+                            <!-- <a routerLink=" (click)="openModal()" ">Product Detail</a> -->
+                        </td>
+                        <td class="px-6 py-4 text-gray-900 font-medium ">
+                            {{item.timestamp|date:'MM/d/yyy'}}
+                        </td>
+                        <!-- <ng-container *ngFor="let rslt of item.flags"> -->
+                        <td class="px-6 py-4 text-gray-900 font-medium">
 
-                        {{item.flagsCount}}
+                            {{item.flagsCount}}
 
-                    </td>
-                    <!-- </ng-container> -->
-                    <td class="px-6 py-4 text-gray-900 font-medium">
-                        <ng-container *ngIf="item.block==false" ;else blocked>
-                            <span
-                                class="inline-flex items-center justify-center rounded-full bg-emerald-100 px-2.5 py-0.5 text-emerald-700">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                    stroke-width="1.5" stroke="currentColor" class="-ms-1 me-1.5 h-4 w-4">
-                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                        d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </td>
+                        <!-- </ng-container> -->
+                        <td class="px-6 py-4 text-gray-900 font-medium">
+                            <ng-container *ngIf="item.block==false">
+                                <span
+                                    class="inline-flex items-center justify-center rounded-full bg-emerald-100 px-2.5 py-0.5 text-emerald-700">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="-ms-1 me-1.5 h-4 w-4">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                    </svg>
+
+                                    <p class="whitespace-nowrap text-sm">Active</p>
+                                </span>
+
+                            </ng-container>
+                            <ng-container *ngIf="item.block==true">
+                                <span
+                                    class="inline-flex items-center justify-center rounded-full bg-red-100 px-2.5 py-0.5 text-red-700">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="-ms-1 me-1.5 h-4 w-4">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z" />
+                                    </svg>
+
+                                    <p class="whitespace-nowrap text-sm">Blocked</p>
+                                </span>
+                            </ng-container>
+
+                        </td>
+                        <td class="px-6 py-4 text-gray-900 font-medium">
+                            <button class="bg-transparent brightness-50 py-2 rounded-md px-3 text-sm hover:scale-125  "
+                                p-tooltip-text="view post" (click)="openModal1(item._id)">
+
+                                <svg class="w-5 h-5  text-gray-800 dark:text-white" aria-hidden="true"
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 18">
+                                    <path fill="currentColor"
+                                        d="M13 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0ZM7.565 7.423 4.5 14h11.518l-2.516-3.71L11 13 7.565 7.423Z" />
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M18 1H2a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1Z" />
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M13 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0ZM7.565 7.423 4.5 14h11.518l-2.516-3.71L11 13 7.565 7.423Z" />
                                 </svg>
+                                <!-- style="width: 1.5rem"  -->
 
-                                <p class="whitespace-nowrap text-sm">Active</p>
-                            </span>
+                            </button><br>
+                            <a class="-mt-5 pt-0 text-xs ">view post</a>
 
-                        </ng-container>
-                        <ng-template #blocked>
-                            <span
-                                class="inline-flex items-center justify-center rounded-full bg-red-100 px-2.5 py-0.5 text-red-700">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                    stroke-width="1.5" stroke="currentColor" class="-ms-1 me-1.5 h-4 w-4">
-                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                        d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z" />
+
+
+
+
+                        </td>
+                        <td class="px-6 py-4 text-gray-900 font-medium">
+                            <button class=" ml-5 bg-transparent  brightness-50 py-2 text-sm hover:scale-125 "
+                                (click)="openModal2(item._id)">
+                                <svg class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true"
+                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                        stroke-width="2"
+                                        d="M1 1v18M1 3.652v9c5.6-5.223 8.4 2.49 14-.08v-9c-5.6 2.57-8.4-5.143-14 .08Z" />
                                 </svg>
-
-                                <p class="whitespace-nowrap text-sm">Blocked</p>
-                            </span>
-                        </ng-template>
-
-                    </td>
-                    <td class="px-6 py-4 text-gray-900 font-medium">
-                        <button class="bg-transparent brightness-50 py-2 rounded-md px-3 text-sm hover:scale-125  "
-                            p-tooltip-text="view post" (click)="openModal1(item._id)">
-
-                            <svg class="w-5 h-5  text-gray-800 dark:text-white" aria-hidden="true"
-                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 18">
-                                <path fill="currentColor"
-                                    d="M13 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0ZM7.565 7.423 4.5 14h11.518l-2.516-3.71L11 13 7.565 7.423Z" />
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                    stroke-width="2"
-                                    d="M18 1H2a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1Z" />
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                    stroke-width="2"
-                                    d="M13 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0ZM7.565 7.423 4.5 14h11.518l-2.516-3.71L11 13 7.565 7.423Z" />
-                            </svg>
-                            <!-- style="width: 1.5rem"  -->
-
-                        </button><br>
-                        <a class="-mt-5 pt-0 text-xs ">view post</a>
-
-
-
-
-
-                    </td>
-                    <td class="px-6 py-4 text-gray-900 font-medium">
-                        <button class=" ml-5 bg-transparent  brightness-50 py-2 text-sm hover:scale-125 "
-                            (click)="openModal2(item._id)">
-                            <svg class="w-5 h-5 text-gray-800 dark:text-white" aria-hidden="true"
-                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                    stroke-width="2"
-                                    d="M1 1v18M1 3.652v9c5.6-5.223 8.4 2.49 14-.08v-9c-5.6 2.57-8.4-5.143-14 .08Z" />
-                            </svg>
-                        </button> <br>
-                        <a class="-mt-5 pt-0 text-xs ">view report</a>
-                    </td>
-                    <!-- <a
+                            </button> <br>
+                            <a class="-mt-5 pt-0 text-xs ">view report</a>
+                        </td>
+                        <!-- <a
                         class="text-blue-600 ">view
                         flags</a> -->
 
 
 
-                    <td class="px-6 py-4">
+                        <td class="px-6 py-4">
 
 
 
-                        <!-- drop down -->
-                        <div x-data="{ isActive: false }" class="relative">
+                            <!-- drop down -->
+                            <div x-data="{ isActive: false }" class="relative">
 
 
-                            <button x-on:click="isActive = !isActive"
-                                class="h-full rounded-md  px-3 py-1.5  text-white bg-orange-400  hover:bg-orange-700  flex space-x-1">
-                                <span class="font-medium rounded-md text-xs mt-[2px]">Action</span>
-                                <span class="space-x-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 "
-                                        viewBox="0 0 20 20" fill="currentColor">
-                                        <path fill-rule="evenodd"
-                                            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                                            clip-rule="evenodd" />
-                                    </svg></span>
+                                <button x-on:click="isActive = !isActive"
+                                    class="h-full rounded-md  px-3 py-1.5  text-white bg-orange-400  hover:bg-orange-700  flex space-x-1">
+                                    <span class="font-medium rounded-md text-xs mt-[2px]">Action</span>
+                                    <span class="space-x-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 "
+                                            viewBox="0 0 20 20" fill="currentColor">
+                                            <path fill-rule="evenodd"
+                                                d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                                clip-rule="evenodd" />
+                                        </svg></span>
 
-                            </button>
+                                </button>
 
 
-                            <div class="absolute end-0 z-10 mt-2 w-40 rounded-md border border-gray-100 bg-white shadow-lg"
-                                role="menu" x-cloak x-transition x-show="isActive" x-on:click.away="isActive = false"
-                                x-on:keydown.escape.window="isActive = false">
-                                <div class="p-2">
-                                    <a href="#"
-                                        class="block rounded-lg px-4 py-2 text-sm  text-black hover:bg-gray-50 hover:text-gray-700"
-                                        role="menuitem">
-                                        Warning Mail
+                                <div class="absolute end-0 z-10 mt-2 w-40 rounded-md border border-gray-100 bg-white shadow-lg"
+                                    role="menu" x-cloak x-transition x-show="isActive"
+                                    x-on:click.away="isActive = false" x-on:keydown.escape.window="isActive = false">
+                                    <div class="p-2">
+                                        <a (click)="sendWarningMail(item.user._id,item._id)"
+                                            class="block rounded-lg px-4 py-2 text-sm  text-black hover:bg-gray-50 hover:text-gray-700"
+                                            role="menuitem">
+                                            Warning Mail
 
-                                    </a>
+                                        </a>
 
-                                    <a href="#"
-                                        class="block rounded-lg px-4 py-2 text-sm text-black hover:bg-gray-50 hover:text-gray-700"
-                                        role="menuitem">
-                                        Block Post
+                                        <a (click)="blockPost(item.user._id,item._id)"
+                                            class="block rounded-lg px-4 py-2 text-sm text-black hover:bg-gray-50 hover:text-gray-700"
+                                            role="menuitem">
+                                            {{item.block ==true ? "Unblock Post" : "Block Post " }}
 
-                                    </a>
-                                    <a href="#"
-                                        class="block rounded-lg px-4 py-2 text-sm text-black hover:bg-gray-50 hover:text-gray-700"
-                                        role="menuitem">
-                                        Suspend User
-                                    </a>
+                                        </a>
+                                        <a (click)="suspendUser(item.user._id)"
+                                            class="block rounded-lg px-4 py-2 text-sm text-black hover:bg-gray-50 hover:text-gray-700"
+                                            role="menuitem">
+                                            Suspend User
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
 
-                    </td>
+                        </td>
 
-                </tr>
-
+                    </tr>
+                </ng-container>
 
             </tbody>
+
         </table>
 
 
