--- a/src/app/component/experts/expert-home/expert-home.component.html
+++ b/src/app/component/experts/expert-home/expert-home.component.html
@@ -12,45 +12,66 @@
 
 
             </div>
-            <div class="flex space-x-14   ">
+            <div class="flex space-x-14  ">
+
 
                 <div
-                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium opacity-95">
+                    class="mt-5 p-5 px-12 rounded-lg bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
+                    <div class="text-white font-medium text-lg whitespace-nowrap">Total Appoiments</div>
+                    <div class="flex justify-center">
+                        <p class="text-white pt-3 font-bold text-lg">
+                            edfedrfgrgrtg</p>
+                    </div>
+                </div>
+
+                <div
+                    class="mt-5 p-5 px-12 rounded-lg  bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium   opacity-95">
+
+                    <p class="text-white font-medium text-lg whitespace-nowrap">Chat Revenue</p>
+                    <div class="flex justify-center pt-2">
+                        <p class="text-white font-bold text-lg">fsdfgdgdfg</p>
+                    </div>
                 </div>
                 <div
-                    class="mt-5 p-5 rounded-lg  bg-gradient-to-r from-green-400 via-green-500 to-green-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-lg shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium   opacity-95">
+                    class="mt-5 p-5 px-12 rounded-lg bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium  opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
+                    <p class="text-white font-medium text-lg whitespace-nowrap">Video Revenue</p>
+                    <div class="flex justify-center pt-2">
+                        <p class="text-white font-bold text-lg">sdasdesdas₹</p>
+                    </div>
                 </div>
                 <div
-                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium  opacity-95">
+                    class="mt-5 p-5 px-12 rounded-lg bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 shadow-lg shadow-teal-500/50 dark:shadow-lg dark:shadow-teal-800/80 font-medium  opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
+                    <p class="text-white font-medium text-lg whitespace-nowrap">Active Appoinment</p>
+                    <div class="flex justify-center pt-2">
+                        <p class="text-white font-bold text-lg">fgfgdfgdf</p>
+                    </div>
                 </div>
-                <div
-                    class="mt-5 p-5 rounded-lg bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 shadow-lg shadow-teal-500/50 dark:shadow-lg dark:shadow-teal-800/80 font-medium  opacity-95">
-
-                    <p>dfkjrhfiruhgir</p>
-                </div>
-                <div
+                <!-- <div
                     class="mt-5 p-5 rounded-lg bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 shadow-lg shadow-red-500/50 dark:shadow-lg dark:shadow-red-800/80 font-medium  opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
+                    <p class="text-white font-medium text-lg whitespace-nowrap">Chats Sessions</p>
+                    <div class="flex justify-center pt-2">
+                        <p class="text-white font-bold text-lg">{{dashboardCounts?.chatCount}}</p>
+                    </div>
                 </div>
                 <div
                     class="mt-5 p-5 rounded-lg bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 dark:shadow-lg dark:shadow-lime-800/80 font-medium  opacity-95">
 
-                    <p>dfkjrhfiruhgir</p>
-                </div>
+                    <p class="text-white font-medium text-lg whitespace-nowrap">Video Session</p>
+                    <div class="flex justify-center pt-2">
+                        <p class="text-white font-bold text-lg">{{dashboardCounts?.videoCount}}</p>
+                    </div>
+                </div> -->
 
 
             </div>
 
 
         </div>
-        <div class="flex space-x-10 mt-32">
+        <div class="flex space-x-10 mt-40">
 
             <div class="rounded-2xl  shadow-lg   border w-fit  p-5  mt-5    ">
                 <app-piechart></app-piechart>
