--- a/src/app/piechart/piechart.component.html
+++ b/src/app/piechart/piechart.component.html
@@ -1,3 +1,4 @@
+<h1 class="text-base font-bold text-black">{{name}}</h1>
 <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient"
     [legend]="showLegend" [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)"
     (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
