--- a/src/app/component/experts/expert-dashboard/expert-dashboard.component.html
+++ b/src/app/component/experts/expert-dashboard/expert-dashboard.component.html
@@ -90,8 +90,12 @@
                 <button
                     class="focus:outline-none focus:ring-orange-300  hover:bg-orange-600 active:bg-orange-700 mt-8 font-semibold bg-orange-500 px-5 py-2  rounded-lg text-white"
                     (click)="ExpertRegiterForm()">
-                    Become An
-                    Expert</button>
+                    Join</button>
+                <button
+                    class="focus:outline-none ml-5 focus:ring-orange-300  hover:bg-orange-600 active:bg-orange-700 mt-8 font-semibold bg-orange-500 px-5 py-2  rounded-lg text-white"
+                    (click)=" expertLogin()">
+                    Login
+                </button>
             </div>
             <div class="h-96 my-2">
 
