--- a/src/app/component/experts/videocall/videocall.component.html
+++ b/src/app/component/experts/videocall/videocall.component.html
@@ -1,17 +1,16 @@
-<div id="jitsi-iframe" style="height:500px;width:500px;"></div>
+<div id="jist-iframe" style="height:500px;width:500px;"></div>
 
 <!-- For Custom Controls-->
 <div class="item-center">
     <span>Custom Controls</span>
 </div>
-<div class="item-center" style="height:500px;width:500px;">
-    <i (click)="executeCommand('toggleAudio')" class="fas fa-2x grey-color"
-        [ngClass]="isAudioMuted ? 'fa-microphone-slash' : 'fa-microphone'" aria-hidden="true" title="Mute / Unmute">
-    </i>
-    <i (click)="executeCommand('hangup')" class="fas fa-phone-slash fa-2x red-color" aria-hidden="true"
+<div class="item-center" style="height:100%; width:100%;">
+    <i (click)="executeCommand('toggleAudio')" class="fa fa-2x grey-color"
+        [ngClass]="isAudioMuted ? 'fa-microphone-slash' : 'fa-microphone'" aria-hidden="true" title="Mute / Unmute"></i>
+    <i (click)="executeCommand('hangup')" class="fa fa-phone-slash fa-2x red-color" aria-hidden="true"
         title="Leave"></i>
-    <i (click)="executeCommand('toggleVideo')" class="fas fa-2x grey-color"
-        [ngClass]="isVideoMuted ? 'fa-video-slash' : 'fa-video'" aria-hidden="true" title="Start / Stop camera"></i>
-    <i (click)="executeCommand('toggleShareScreen')" class="fas fa-film fa-2x grey-color" aria-hidden="true"
+    <i (click)="executeCommand('toggleVideo')" class="fa fa-2x grey-color"
+        [ngClass]="isVideoMuted ? 'fa-video-slash':'fa-video'" aria-hidden="true" title="Start / Stop Camera"></i>
+    <i (click)="executeCommand('toggleShareScreen')" class="fa fa-film fa-2x grey-color" aria-hidden="true"
         title="Share your screen"></i>
 </div>
