--- a/src/app/component/users/profile/profile.component.html
+++ b/src/app/component/users/profile/profile.component.html
@@ -71,7 +71,7 @@
 
 
         </section>
-        <section class="thoughts mt-0">
+        <section class="thoughts -mt-20">
             <div class=" w-full flex justify-center mt-0 ">
 
 
