--- a/src/app/component/users/slots/slots.component.html
+++ b/src/app/component/users/slots/slots.component.html
@@ -19,7 +19,7 @@
 
 
     <ng-container *ngIf="showtodaySlots ">
-        <ng-container *ngIf="slots.length!=0 ;else nocontent">
+        <ng-container *ngIf="slots?.length!=0 ;else nocontent">
             <ng-container *ngFor="let item of slots">
                 <button (click)="payNow(item._id)"
                     class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
@@ -33,7 +33,7 @@
 
     </ng-container>
     <ng-container *ngIf="showtommorowSlot ">
-        <ng-container *ngIf="slotTomorrow.length!=0;else nocontent">
+        <ng-container *ngIf="slotTomorrow?.length!=0;else nocontent">
             <ng-container *ngFor="let item of slotTomorrow">
                 <button (click)="payNow(item._id)"
                     class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-xs font-medium text-orange-500  hover:text-black rounded-lg group bg-gradient-to-br from-red-200 via-red-300 to-yellow-200 group-hover:from-red-200 group-hover:via-red-300 group-hover:to-yellow-200 dark:text-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none focus:ring-red-100 dark:focus:ring-red-400">
