video call issue solved.expert appoinment compleated .neddede to link to video component

--- a/src/app/component/experts/view-appoinments/view-appoinments.component.html
+++ b/src/app/component/experts/view-appoinments/view-appoinments.component.html
@@ -20,18 +20,22 @@
                 </div>
             </div>
             <!-- buttons -->
-            <div class=" mt-7 m-48  h-fit border   pb-16 ">
+            <div class=" mt-10 m-48  h-[500px]  border  pb-16  border-gray-500 overflow-y-scroll">
                 <div class=" p-10 flex justify-center">
-                    <div><button> Schedules
-                        </button>
+                    <div><button (click)="showSchedules()"
+                            class="text-orange-500  bg-transparent font-medium py-2 px-51" [ngClass]="{'border-b-2 border-gray-500 ':  schedules
+                    }">Schedules</button>
                     </div>
-                    <div><button class="text-orange-500  bg-transparent font-medium py-2 px-5">Previous
+
+                    <div><button (click)="showpreviouseSchedules()"
+                            class="text-orange-500  bg-transparent font-medium py-2 px-5"
+                            [ngClass]="{'border-b-2 border-gray-500 ':  previouseSchedules}">Previous
                             Schedules</button></div>
                 </div>
                 <!-- Active schedules -->
-                <ng-container>
-                    <div class="flex justify-center">
-                        <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200  pt-5 pb-5">
+                <ng-container *ngIf="schedules">
+                    <div class="flex justify-center" *ngFor="let item of activeAppoinments">
+                        <div class=" w-2/3 ml-8 mr-8 mb-0 border  border-gray-200  pt-5 pb-5">
 
 
                             <div class="flex items-center gap-4 pl-4 ">
@@ -39,22 +43,45 @@
                                     src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
                                     class="h-12 w-12 rounded-lg object-cover" />
 
-                                <div class="flex space-x-16">
-                                    <p class="font-medium text-black">Carol Daines</p>
-                                    <p class="text-gray-500">Session with <span class="text-gray-700"> Carol Daines
-                                        </span>
-                                        Scheduleded at 2:00 PM </p>
-                                    <div class="mr-5 pr-10">
-                                        <button
-                                            class="bg-orange-500 text-white px-10 py-2 text-base font-medium  rounded-xl ">Join</button>
-                                    </div>
+                                <div class="flex space-x-16 ">
+                                    <p class="font-medium text-black">{{item.user.name}}</p>
+                                    <p class="text-gray-500">Session
+                                        Scheduleded On <span
+                                            class="font-medium text-black text-sm">{{item.scheduledAt.slot_date|date
+                                            }}</span> At
+                                        <span
+                                            class="font-medium text-black text-sm">{{item.scheduledAt.slot_time}}</span>
+                                    </p>
+                                    <ng-container *ngIf="activateJoinButton; else notactive ">
+                                        <div class="mr-5 pr-10">
+
+                                            <button
+                                                class="bg-orange-500 text-white px-7 py-1.5 text-xs font-medium  rounded-lg ">Join</button>
+                                        </div>
+                                    </ng-container>
+
+                                    <ng-template #notactive>
+
+                                        <svg class="w-6 h-6 text-orange-500 dark:text-white" aria-hidden="true"
+                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                            <path stroke="currentColor" stroke-linejoin="round" stroke-width="2"
+                                                d="M10 6v4l3.276 3.276M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                                        </svg>
+
+                                        <div>
+
+                                        </div>
+                                    </ng-template>
                                 </div>
                             </div>
 
                         </div>
                     </div>
-                    <div class="flex justify-center">
-                        <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200  pt-5 pb-5">
+                </ng-container>
+                <!-- previouse Schedules -->
+                <ng-container *ngIf="previouseSchedules">
+                    <div class="flex justify-center" *ngFor="let item of previouseAppoinments">
+                        <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200 space-y-4  pt-5 pb-5">
 
 
                             <div class="flex items-center gap-4 pl-4 ">
@@ -63,36 +90,16 @@
                                     class="h-12 w-12 rounded-lg object-cover" />
 
                                 <div class="flex space-x-16">
-                                    <p class="font-medium text-black">Carol Daines</p>
-                                    <p class="text-gray-500">Session with <span class="text-gray-700"> Carol Daines
-                                        </span>
-                                        Scheduleded at 2:00 PM </p>
+                                    <p class="font-medium text-black">{{item.user.name}}</p>
+                                    <p class="text-gray-500">Session
+                                        Conducted On <span
+                                            class="font-medium text-black text-sm">{{item.scheduledAt.slot_date|date
+                                            }}</span> At
+                                        <span
+                                            class="font-medium text-black text-sm">{{item.scheduledAt.slot_time}}</span>
+                                    </p>
                                     <div class="mr-5 pr-10">
-                                        <button
-                                            class="bg-orange-500 text-white px-10 py-2 text-base font-medium  rounded-xl ">Join</button>
-                                    </div>
-                                </div>
-                            </div>
 
-                        </div>
-                    </div>
-                    <div class="flex justify-center">
-                        <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200  pt-5 pb-5">
-
-
-                            <div class="flex items-center gap-4 pl-4 ">
-                                <img alt="Women"
-                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                                    class="h-12 w-12 rounded-lg object-cover" />
-
-                                <div class="flex space-x-16">
-                                    <p class="font-medium text-black">Carol Daines</p>
-                                    <p class="text-gray-500">Session with <span class="text-gray-700"> Carol Daines
-                                        </span>
-                                        Scheduleded at 2:00 PM </p>
-                                    <div class="mr-5 pr-10">
-                                        <button
-                                            class="bg-orange-500 text-white px-10 py-2 text-base font-medium  rounded-xl ">Join</button>
                                     </div>
                                 </div>
                             </div>
@@ -100,79 +107,8 @@
                         </div>
                     </div>
                 </ng-container>
-                <!-- <ng-container >
-                    <div class="flex justify-center">
-                        <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200 space-y-4  pt-5 pb-5">
 
 
-                            <div class="flex items-center gap-4 pl-4 ">
-                                <img alt="Women"
-                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                                    class="h-12 w-12 rounded-lg object-cover" />
-
-                                <div class="flex space-x-16">
-                                    <p class="font-medium text-black">Carol Daines</p>
-                                    <p class="text-gray-500">Session with <span class="text-gray-700"> Carol Daines
-                                        </span>
-                                        conducted at 1 day ago </p>
-                                    <div class="mr-5 pr-10">
-
-                                    </div>
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <div class="flex justify-center">
-                        <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200 space-y-4  pt-5 pb-5">
-
-
-                            <div class="flex items-center gap-4 pl-4 ">
-                                <img alt="Women"
-                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                                    class="h-12 w-12 rounded-lg object-cover" />
-
-                                <div class="flex space-x-16">
-                                    <p class="font-medium text-black">Carol Daines</p>
-                                    <p class="text-gray-500">Session with <span class="text-gray-700"> Carol Daines
-                                        </span>
-                                        conducted at 1 day ago </p>
-                                    <div class="mr-5 pr-10">
-
-                                    </div>
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <div class="flex justify-center">
-                        <div class=" w-2/3 ml-8 mr-8 mb-0 border border-gray-200 space-y-4  pt-5 pb-5">
-
-
-                            <div class="flex items-center gap-4 pl-4 ">
-                                <img alt="Women"
-                                    src="https://images.unsplash.com/photo-1611432579699-484f7990b127?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                                    class="h-12 w-12 rounded-lg object-cover" />
-
-                                <div class="flex space-x-16">
-                                    <p class="font-medium text-black">Carol Daines</p>
-                                    <p class="text-gray-500">Session with <span class="text-gray-700"> Carol Daines
-                                        </span>
-                                        conducted at 1 day ago </p>
-                                    <div class="mr-5 pr-10">
-
-                                    </div>
-                                </div>
-                            </div>
-
-
-                        </div>
-                    </div>
-
-
-                </ng-container> -->
 
             </div>
 
