--- a/src/app/component/experts/videocall/videocall.component.html
+++ b/src/app/component/experts/videocall/videocall.component.html
@@ -1,16 +1,58 @@
-<div id="jist-iframe" style="height:500px;width:500px;"></div>
+<nav class="bg-white border-[#FFE7DE] dark:bg-gray-900 fixed w-full font-bold scroll-smooth drop-shadow-xl top-0 ">
+    <div class=" max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-3 ">
+        <a class="flex items-center">
+            <img src="../../../../assets/image/Groupnow me logo.png" class="h-7 ml-3" alt="now&meLogo" />
 
-<!-- For Custom Controls-->
-<div class="item-center">
-    <span>Custom Controls</span>
-</div>
-<div class="item-center" style="height:100%; width:100%;">
-    <i (click)="executeCommand('toggleAudio')" class="fa fa-2x grey-color"
-        [ngClass]="isAudioMuted ? 'fa-microphone-slash' : 'fa-microphone'" aria-hidden="true" title="Mute / Unmute"></i>
-    <i (click)="executeCommand('hangup')" class="fa fa-phone-slash fa-2x red-color" aria-hidden="true"
-        title="Leave"></i>
-    <i (click)="executeCommand('toggleVideo')" class="fa fa-2x grey-color"
-        [ngClass]="isVideoMuted ? 'fa-video-slash':'fa-video'" aria-hidden="true" title="Start / Stop Camera"></i>
-    <i (click)="executeCommand('toggleShareScreen')" class="fa fa-film fa-2x grey-color" aria-hidden="true"
-        title="Share your screen"></i>
+        </a>
+
+
+    </div>
+</nav>
+<div class="ml-48 mt-36 flex space-x-32 ">
+    <div>
+        <div id="jitsi-iframe"></div>
+
+        <div class="item-center">
+
+        </div>
+        <div class="item-center">
+            <span>&nbsp;&nbsp;</span>
+            <i (click)="executeCommand('toggleAudio')" class="fas fa-2x grey-color"
+                [ngClass]="isAudioMuted ? 'fa-microphone-slash' : 'fa-microphone'" aria-hidden="true"
+                title="Mute / Unmute"></i>
+
+
+        </div>
+    </div>
+    <div class="mt-20">
+        <h1 class="font-normal text-lg mb-8 text-gray-500  ">Share the meet link here</h1>
+        <div>
+
+            <form (ngSubmit)="submitForm()">
+                <div>
+                    <label for="meetlink" class="mb-3 block text-sm font-medium text-black">Meet Link</label>
+                    <input type="text" id="meetlink" name="link" [(ngModel)]="formData.link" required
+                        class="block w-full rounded-md border-gray-300 shadow-sm focus:border-primary-400 focus:ring focus:ring-primary-200 focus:ring-opacity-50 disabled:cursor-not-allowed disabled:bg-gray-50 disabled:text-gray-500"
+                        placeholder="Paste link here" />
+
+                    <div *ngIf="!formData.link && formData.link !== ''" class="text-red-600 text-sm">Meet Link is
+                        required .
+                    </div>
+                </div>
+
+                <button type="submit"
+                    class="mt-5 rounded-lg border border-primary-500 bg-green-500 px-5 py-2 text-center text-xs font-semibold text-white shadow-sm transition-all hover:border-primary-700 hover:bg-primary-700 focus:ring focus:ring-primary-200 disabled:cursor-not-allowed disabled:border-primary-300 disabled:bg-primary-300">Send</button>
+
+                <button type="reset" class="ml-3 bg-red-500 rounded-lg mt-5 text-white px-5 py-2 font-medium text-xs"
+                    (click)="delete()">Revoke</button>
+            </form>
+
+
+
+
+        </div>
+
+
+    </div>
+
 </div>
